[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Electron.gd" type="Script" id=1]
[ext_resource path="res://addons/3D Outline/Outline.material" type="Material" id=2]

[sub_resource type="SpatialMaterial" id=1]
resource_local_to_scene = true
next_pass = ExtResource( 2 )
albedo_color = Color( 0.454902, 0.917647, 0.964706, 1 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
resource_local_to_scene = true
gravity = Vector3( 0, 0, 0 )
scale_curve = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
next_pass = ExtResource( 2 )
albedo_color = Color( 0.768627, 0.952941, 0.972549, 1 )

[sub_resource type="SphereMesh" id=6]
resource_local_to_scene = true
material = SubResource( 5 )
radial_segments = 6
rings = 4

[sub_resource type="SphereShape" id=7]

[node name="Electron" type="CSGSphere"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.49316, 0, 0 )
material = SubResource( 1 )
script = ExtResource( 1 )

[node name="Trace" type="Particles" parent="."]
visible = false
amount = 50
lifetime = 2.03
local_coords = false
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[node name="Area" type="Area" parent="."]
monitorable = false

[node name="Shape" type="CollisionShape" parent="Area"]
shape = SubResource( 7 )
[connection signal="input_event" from="Area" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_mouse_exited"]
